security/authentication.yaml
https://techexpertise.medium.com/setting-up-basic-authentication-for-kubernetes-cluster-on-minikube-1-e84e1b56c64
#should have the csv authentication file 
user-detail.csv
password123,user1,u0001
password123,user2,u0002

--basic-auth-file=/home/mojo/user-details.csv

Create a file named “user-details.csv” with the user details in the “/tmp/users” directory of the cluster node

mkdir -p /tmp/users
cat > /tmp/users/user-details.csv
abcd,wso2user,user123

Now let’s apply the configuration changes for the “kube-apiserver” static pod in the “kube-system” namespace configured
 by the Minikube to support basic authentication by mounting the “user-details.csv” file to the pod.

 Include the “--basic-auth-file” startup option pointing to the
“user-details.csv” file in the volumeMount “/tmp/auth”

Configure the volumes pointing to the “/tmp/users” hostpath where the “user-details.csv” file resides in the node

Configure the volumeMounts to mount the
“/tmp/users/user-details.csv” file from the node to the
“kube-apiserver” pod via the mount path “/tmp/auth/user-details.csv”

cd /etc/kubernetes/manifests
vi kube-apiserver.yaml


Follow the below instructions to configure basic authentication in a kubeadm setup.

Create a file with user details locally at /tmp/users/user-details.csv

# User File Contents
password123,user1,u0001
password123,user2,u0002
password123,user3,u0003
password123,user4,u0004
password123,user5,u0005


Edit the kube-apiserver static pod configured by kubeadm to pass in the user details. The file is located at /etc/kubernetes/manifests/kube-apiserver.yaml



apiVersion: v1
kind: Pod
metadata:
  name: kube-apiserver
  namespace: kube-system
spec:
  containers:
  - command:
    - kube-apiserver
      <content-hidden>
    image: k8s.gcr.io/kube-apiserver-amd64:v1.11.3
    name: kube-apiserver
    volumeMounts:
    - mountPath: /tmp/users
      name: usr-details
      readOnly: true
  volumes:
  - hostPath:
      path: /tmp/users
      type: DirectoryOrCreate
    name: usr-details


Modify the kube-apiserver startup options to include the basic-auth file



apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  name: kube-apiserver
  namespace: kube-system
spec:
  containers:
  - command:
    - kube-apiserver
    - --authorization-mode=Node,RBAC
      <content-hidden>
    - --basic-auth-file=/tmp/users/user-details.csv
Create the necessary roles and role bindings for these users:
