security/networkpolicy2kodecloud.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internal-policy
spec:
  podSelector:
    matchLabels:
      role: internal
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}
  egress:
  - to:
    - podSelector:
        matchLabels:
          name: mysql
    ports:
      - protocol: tcp
        port: 3306 


# We have also allowed Egress traffic to TCP and UDP port. 
# This has been added to ensure that the internal DNS resolution works from the internal pod.

# kubectl get svc -n kube-system
